調整完成 Post 相關 API 使用 Premise 與自定義錯誤
