# controllers/posts.js
@@ -1,11 +1,23 @@
+const bcrypt = require('bcryptjs'); // 密碼加密
+const validator = require('validator'); // 格式驗證
+const dotenv = require('dotenv');
+dotenv.config({ path: './.env' });
+
 const handleSuccess = require('../handStates/handleSuccess');
 const handleError = require('../handStates/handleError');
+const { isAuth, generateSendJWT } = require('../handStates/auth');
+const appError = require('../customErr/appError');
+
 const Posts = require('../model/posts');
 
 module.exports = {
-  async getPosts(req, res) {
-    /** #swagger.tags = ['posts (貼文)']
-      *? #swagger.description = `
+  getPosts() {
+    /** 
+      *? #swagger.tags = ['posts (貼文)'],
+      * #swagger.security = [{
+        'apiKeyAuth': []
+      }],
+      * #swagger.description = `
           <p>取得所有貼文。</p>
           參數用法：
           <ul>
@@ -49,100 +61,101 @@ module.exports = {
         }
       }
     */
-    const timeSort = req.query.timeSort === 'asc' ? 'createAt' : '-createAt';
-    const q =
-      req.query.q !== undefined ? { discussContent: new RegExp(req.query.q) } : {};
-    /** 網址參數用法：
-      * 參數名 timeSort 是否有 'asc' 值，有值有舊到新；沒值有新到舊
-      * 參數名 q 用正則表達式以 JS 轉 mongDB 語法 .find( parName: /<查尋字串>/)，以物件包裝查找留言
-    */
-    const posts = await Posts.find(q).populate({
-        path: "userData",
-        select: "email userPhoto userName",
-      }).sort(timeSort);
-    handleSuccess(res, posts);
+
+    return handleError(async (req, res, next) => {
+      const timeSort = req.query.timeSort === 'asc' ? 'createAt' : '-createAt';
+      const q =
+        req.query.q !== undefined
+          ? { discussContent: new RegExp(req.query.q) }
+          : {};
+      /** 網址參數用法：
+       * 參數名 timeSort 是否有 'asc' 值，有值有舊到新；沒值有新到舊
+       * 參數名 q 用正則表達式以 JS 轉 mongDB 語法 .find( parName: /<查尋字串>/)，以物件包裝查找留言
+       */
+      const posts = await Posts.find(q)
+        .populate({
+          path: 'userData',
+          select: 'email userPhoto userName',
+        })
+        .sort(timeSort);
+      handleSuccess(res, posts);
+    });
   },
-  async createdPost(req, res) {
-    /** #swagger.tags = ['posts (貼文)']
-     ** #swagger.description = '新增單筆貼文'
-     */
-    try {
-      const { body } = req;
-      // console.log('body.user.id', body.user.id);
-      if (body.userData) {
-        console.log('body.userData', body.userData);
-        /**
-          ** #swagger.parameters['body'] = {
-            in: "body",
-            type: "object",
-            required: true,
-            description: `
-              <ul>
-                <li>資料格式查看必填欄位，點按下方 Model 切換後，屬性欄位名稱的後方紅色的 <code>*</code></li>
-                <li>新增貼文需先有 user 資料 (<code>body.userData.id</code> 更換成 user ID)，透過 user 資料取 id (向 posts 的屬性欄位 <code>userData</code> 關連)。</li>
-              </ul> `,
-            schema: {
-              "userData": "body.userData.id",
-              "$discussContent": "外面看起來就超冷…\n\r我決定回被窩繼續睡…>.<-",
-              "discussPhoto": "https://images.unsplash.com/photo-1485594050903-8e8ee7b071a8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=900&h=350&q=80",
-              "$tag": "標籤 string"
-            }
-          }
-        */
-        const newPost = await Posts.create({
-          userData: body.userData,
-          discussContent: body.discussContent,
-          tag: body.tag
-        });
-        handleSuccess(res, newPost);
-      } else {
-        handleError(res);
+  createdPost() {
+    /** 
+      ** #swagger.tags = ['posts (貼文)'],
+      * #swagger.security = [{
+        'apiKeyAuth': []
+      }],
+      * #swagger.description = '新增單筆貼文',
+      * #swagger.parameters['body'] = {
+        in: "body",
+        type: "object",
+        required: true,
+        description: `
+          <ul>
+            <li>資料格式查看必填欄位，點按下方 Model 切換後，屬性欄位名稱的後方紅色的 <code>*</code></li>
+            <li>新增貼文需先有 user.id 登入取得 Tokne</li>
+            <li>透過 user.id 向 posts 的屬性欄位 <code>userData</code> 關連。</li>
+          </ul> `,
+        schema: {
+          "$discussContent": "外面看起來就超冷…\n\r我決定回被窩繼續睡…>.<-",
+          "discussPhoto": "https://images.unsplash.com/photo-1485594050903-8e8ee7b071a8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=900&h=350&q=80",
+          "$tag": "標籤 string"
+        }
       }
-    } catch (err) {
-      console.log(
-        'POST err.name => ',
-        err.name,
-        'POST err.message => ',
-        err.message
-      );
-      handleError(res, err);
-    }
+     */
+    
+      return handleError(async (req, res, next) => {
+      const user = req.user.id;
+      const { discussContent, discussPhoto, tag } = req.body;
+
+      if (!discussContent) return next(appError(400, '內容必填', next));
+      if (!tag) return next(appError(400, '標籤必填', next));
+
+      const newPost = await Posts.create({
+        userData: user,
+        discussContent,
+        discussPhoto,
+        tag,
+      });
+      handleSuccess(res, newPost);
+    });
   },
-  async delALL(req, res) {
+  delALL() {
     /** #swagger.tags = ['posts (貼文)']
-      *! #swagger.description = '刪除所有貼文'
+     *! #swagger.description = '刪除所有貼文'
     */
-    const delPosts = await Posts.deleteMany();
-    handleSuccess(res, delPosts);
+    
+    return async (req, res, next) => {
+      if (req.originalUrl === '/posts/')
+        return next(appError(404, '無此網站路由', next));
+      handleSuccess(res, await Posts.deleteMany());
+    };
   },
-  async delOne(req, res) {
+  delOne() {
     /** #swagger.tags = ['posts (貼文)']
      *! #swagger.description = '刪除單筆貼文'
+     */
+    /**
+      *! #swagger.parameters['id'] = {
+        in: 'path',
+        type: 'string',
+        required: true,
+      }
     */
-    try {
-      /**
-        *! #swagger.parameters['id'] = {
-          in: 'path',
-          type: 'string',
-          required: true,
-        }
-      */
-      const urlID = req.url.split('/').pop();
-      const findByIdAndDeletePosts = await Posts.findByIdAndDelete({
-        _id: urlID,
-      });
-      findByIdAndDeletePosts ? handleSuccess(res, urlID) : handleError(res);
-    } catch (err) {
-      console.log(
-        'POST err.name => ',
-        err.name,
-        'POST err.message => ',
-        err.message
-      );
-      handleError(res, err);
-    }
+    
+    return async (req, res, next) => {
+      if (!req.params.id || req.params.id === '')
+        return next(appError(400, '未帶入刪除的資料 id 或其他錯誤', next));
+      const deletePost = await Posts.findByIdAndDelete({
+        _id: req.params.id,
+      }).catch((err) => appError(400, '無此 id 或 id 長度不足', next));
+      if (!deletePost) return next(appError(400, '刪除失敗，查無此id', next));
+      handleSuccess(res, req.params.id);
+    };
   },
-  async upDatePost(req, res) {
+  upDatePost() {
     /** #swagger.tags = ['posts (貼文)']
      ** #swagger.description = '更新單筆貼文'
      *! #swagger.parameters['id'] = {
@@ -150,45 +163,38 @@ module.exports = {
           type: 'string',
           required: true,
         }
-     */ 
-    try {
-      const { body } = req;
-      const urlID = req.params.id;
-      if (urlID) {
-        /**
-          ** #swagger.parameters['body'] = {
-            in: "body",
-            type: "object",
-            required: true,
-            description: "Body 資料格式",
-            schema: {
-              "tag": "string-PATCH",
-              "$discussContent": "string-PATCH",
-              "discussPhoto": "https://images.unsplash.com/photo-1485594050903-8e8ee7b071a8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=900&h=350&q=80"
-            },
-          }
-        */
-        const editPost = await Posts.findByIdAndUpdate(
-          urlID,
-          {
-            tag: body.tag,
-            discussContent: body.discussContent,
-            discussPhoto: body.discussPhoto,
-          },
-          { returnDocument: 'after' }
-        );
-        editPost !== null ? handleSuccess(res, editPost) : handleError(res);
-      } else {
-        handleError(res);
+    */
+    /**
+      ** #swagger.parameters['body'] = {
+        in: "body",
+        type: "object",
+        required: true,
+        description: "Body 資料格式",
+        schema: {
+          "tag": "string-PATCH",
+          "$discussContent": "string-PATCH",
+          "discussPhoto": "https://images.unsplash.com/photo-1485594050903-8e8ee7b071a8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=900&h=350&q=80"
+        },
       }
-    } catch (err) {
-      console.log(
-        'POST err.name => ',
-        err.name,
-        'POST err.message => ',
-        err.message
+    */
+    return async (req, res, next) => {
+      const { discussContent, discussPhoto, tag } = req.body;
+      const paramsID = req.params.id;
+
+      if (!discussContent) return appError(400, '更新失敗，貼文內容必填', next);
+
+      const editPost = await Posts.findByIdAndUpdate(
+        paramsID,
+        {
+          discussContent,
+          discussPhoto,
+          tag,
+        },
+        { returnDocument: 'after' }
       );
-      handleError(res, err);
-    }
+      if (!editPost)
+        return appError(400, '更新失敗，查無此 id 或欄位格式錯誤', next);
+      handleSuccess(res, editPost);
+    };
   },
 };
