# routes/users.js
@@ -11,13 +11,13 @@ const UsersControllers = require('../controllers/users');
 // router.get('/', UsersControllers.listUsers());
 // 新增單筆會員 (後台)
 // router.post('/', UsersControllers.createdUser());
-// 取得登入者個人資訊
-router.get('/ownProfile', isAuth, UsersControllers.ownProfile());
-// 註冊
-router.post('/signUp', UsersControllers.signUp());
 // 登入
 router.post('/login', UsersControllers.login());
+// 取得登入者個人資訊
+router.post('/signUp', UsersControllers.signUp());
 // 修改會員資料
+router.get('/ownProfile', isAuth, UsersControllers.ownProfile());
+// 註冊
 router.patch('/patchProfile', isAuth, UsersControllers.patchProfile());
 // 修改密碼
 router.patch('/updatePassword', isAuth, UsersControllers.updatePassword());
